--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Submodule"]
 	path = Submodule
 	url = https://github.com/mlakshmanm/Submodule.git
+[submodule "test"]
+	path = test
+	url = https://github.com/mlakshmanm/test.git
